--- a/public/index.html
+++ b/public/index.html
@@ -42,8 +42,20 @@
       }
 #container
 {
-  padding:10%;
+  padding:2%;
+  width: 50%;
 }
+      .button {
+  background-color: #593232; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
 
 .loader {
   border: 16px solid #f3f3f3;
@@ -64,23 +76,6 @@
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
-}
-
-button{
-  background-color: transparent;
-  border: solid 4px white;
-  color: white;
-  border-radius: 5px;
-  margin-top: 3%;
-  width: 30%;
-  font-weight: bolder;
-  transition: ease-in 0.2s;
-}
-
-button:hover
-{
-  border: solid 10px white;
-
 }
       </style>
     <title>COVID resources</title>
@@ -106,7 +101,7 @@ button:hover
 <div id="container">
     <input type="text" placeholder="Enter the location"></input>
     <input type="text" placeholder="Enter the service required"></input>
-    <center><button>SEARCH</button></center>
+    <button style="background-color: transparent; color: white; border: solid 1px white;width:100px;height: 30px;">Search</button>
   </div>
 
     <div id="root"></div>
