--- a/public/index.html
+++ b/public/index.html
@@ -124,12 +124,10 @@
     <button class="accordion">Please Click Here to read disclaimer 👈</button>
     <div class="panel">
       <p>
-        This app is in prototype stage, it was released early considering how
-        dire the situation is. There are a bunch of features left to implement.
-        Please use Ctrl+F to look for your city or the facility you need. One
+        It has come to our attention that some of the links lead to blackmarketing leads. This is utterly disgraceful to our society, but nonetheless it is a fact. Please be aware and report to police if you find such incidences. We wll try our best to remove such leads from our website. <br><br>This app is in prototype stage, it was released early considering how
+        dire the situation is. There are a bunch of features left to implement. One
         can assume that the time of the Tweet is more or less when the resouce
-        was verified. Since we have not added a bunch of core features, the data
-        might take 5-10 seconds to load. Feel free to reach out to us via
+        was verified. 100% accuracy is not guarenteed, but you might be able to find some help from here. The data might take a few seconds to load. Feel free to reach out to us via
         <a href="https://twitter.com/ResourcesBot">Twitter</a> for errors or
         corrections. We wish you the best, and hope that your situation
         resolves.
@@ -147,7 +145,8 @@
     <div id="root"></div>
 
     <br /><br />
-    <center><div class="loader"></div></center>
+    <center><div class="loader"></div>
+    If you have to wait an unusually long amount of time, that means we (probably) currently have no leads for this location and facility, it is a good idea to search for neighbouring cities or to search a little more on Twitter. While you do that, let this run in the background for a while, just in case.</center>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
